turnkey-phplist-12.0 (1) turnkey; urgency=low

  * Initial public release of TurnKey Linux PHPlist.

  * Set PHPlist admin password and email on firstboot (convenience, security).

  * Includes postfix MTA (bound to localhost) for sending of email. Also
    includes webmin postfix module for convenience.

  * SSL support out of the box.

  * MySQL related:

    - Set MySQL root password on firstboot (convenience, security).
    - Force MySQL to use Unicode/UTF8.
    - Includes PhpMyAdmin (listening on port 12322 - uses SSL).

  * Regenerates all secrets during installation / firstboot (security).

  * Includes php-xcache PHP opcode cacher / optimizer (performance).

  * Major component versions

    phplist         2.10.18 (upstream archive)
    apache2         2.2.16-6+squeeze7
    mysql-server    5.1.63-0+squeeze1
    phpmyadmin      4:3.3.7-7
    postfix         2.7.1-1+squeeze1

  * Note: Please refer to turnkey-core's changelog for changes common to all
    appliances. Here we only describe changes specific to this appliance.

 -- Alon Swartz <alon@turnkeylinux.org>  Wed, 01 Aug 2012 08:00:00 +0200
