@@ -1,8 +1,8 @@
 #!/bin/bash -e
-# set phplist admin password and email
+# set phplist admin password, email and domain
 
 . /etc/default/inithooks
 
 [ -e $INITHOOKS_CONF ] && . $INITHOOKS_CONF
-$INITHOOKS_PATH/bin/phplist.py --pass="$APP_PASS" --email="$APP_EMAIL"
+$INITHOOKS_PATH/bin/phplist.py --pass="$APP_PASS" --email="$APP_EMAIL" --domain="$APP_DOMAIN"
 
